Changes for 3.4.2rc1

New features:
..F....... [ZBXNEXT-4054] implemented feature to open first available dashboard from the list (Ivo)
..F....... [ZBXNEXT-4046] implemented dashboard widget minimum height limit (gcalenko)

Bug fixes:
...G...... [ZBX-12653] fixed heap corruption in Windows agent. Patch from Ronnie Kaech, thanks! (abs)
A......... [ZBX-12660] fixed result of hostinterface.replacehostinterfaces method (Sasha)
..F....... [ZBX-12469] added new context for 'Second' string to be properly translated in maintenance period form (gcalenko)
..F....... [ZBX-12616] fixed trapper item "Allowed hosts" field user macro support (gcalenko)
.......PS. [ZBX-12493] fixed address and ports array size in zbx_init_ipmi_host() to match OpenIPMI internals (Andris, vso)
...G...PS. [ZBX-10820] fixed potential loss of data when server/proxy processes zabbix_sender data (Andris)
...G...PS. [ZBX-4252] eliminated sending of DNS AAAA queries when checking IPv4 incoming connection in agent or for trapper item and A queries in case of IPv6 (Andris)
..F....... [ZBXNEXT-2102] fixed multiple browser sensitive javascript bugs in navigation tree widget and improved coding style (miks)
..F....... [ZBX-12623] fixed label macro resolving in maps (vjaceslavs)
..F....... [ZBX-12578] implemented widget field validation before dashboard is loaded and fixed undefined index for tag field in dashboard widgets (miks)
A.F....... [ZBX-12499] fixed macro expansion in map editor (vjaceslavs)
..F....... [ZBX-12597] fixed graph not being displayed if item update interval contains macro (Ivo)
..F....... [ZBXNEXT-3807] fixed delayed first refresh in map widget; improved coding style (miks)
........S. [ZBX-12500] fixed regular expression pre-processing step to fail if the pattern does not match input data (wiper)
..F.....S. [ZBX-11042] allowed libcurl to choose SMTP authentication mechanism other than PLAIN (gleb, vjaceslavs)