@@ -5,6 +5,7 @@ New features:
 ..F....... [ZBXNEXT-4046] implemented dashboard widget minimum height limit (gcalenko)
 
 Bug fixes:
+..F....... [ZBX-12548] fixed notification sound not being played for message with timeout set to greater than minute (gcalenko)
 ...G...... [ZBX-12653] fixed heap corruption in Windows agent. Patch from Ronnie Kaech, thanks! (abs)
 A......... [ZBX-12660] fixed result of hostinterface.replacehostinterfaces method (Sasha)
 ..F....... [ZBX-12469] added new context for 'Second' string to be properly translated in maintenance period form (gcalenko)
